# Simulador-de-Logistica-Estelar

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargas.cpp  Cargas.h  README.md  Sensores.cpp  Sensores.h  build_output.txt  main.cpp
include/: Background.h  Cargas.h  Hangar.h  Logs.h  Monitoramento.h  Naves.h  UI.h
src/: Background.cpp  Cargas.cpp  Hangar.cpp  Logs.cpp  Monitoramento.cpp  Naves.cpp  Sensores.cpp  SetorSensores.cpp  UI.cpp  main.cpp
